Update Case study 03.ipynb

--- a/Week 07/Case study 03.ipynb
+++ b/Week 07/Case study 03.ipynb
@@ -34,7 +34,7 @@
     "    | Adv02        |                312                |\n",
     "    | Adv03        |                309                |\n",
     "    | Adv04        |                298                |\n",
-    "    | Adv05        |                320                |\n"
+    "    | Adv05        |                320                |"
    ]
   },
   {
