Update Case study 04.ipynb

--- a/Week 08/Case study 04.ipynb
+++ b/Week 08/Case study 04.ipynb
@@ -569,7 +569,8 @@
    "metadata": {},
    "source": [
     "### Conclusion :\n",
-    "Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**."
+    "\n",
+    "Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**.\n"
    ]
   },
   {
@@ -698,7 +699,8 @@
    "metadata": {},
    "source": [
     "### Conclusion :\n",
-    "Since the **P-Value is greater than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**."
+    "\n",
+    "Since the **P-Value is greater than the level of significance** , we accept our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**.\n"
    ]
   }
  ],
