--- a/Week 08/Case study 04.ipynb
+++ b/Week 08/Case study 04.ipynb
@@ -570,7 +570,7 @@
    "source": [
     "### Conclusion :\n",
     "\n",
-    "Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**.\n"
+    "- Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**."
    ]
   },
   {
@@ -700,7 +700,7 @@
    "source": [
     "### Conclusion :\n",
     "\n",
-    "Since the **P-Value is greater than the level of significance** , we accept our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**.\n"
+    "- Since the **P-Value is greater than the level of significance** , we accept our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**."
    ]
   }
  ],
