--- a/Week 08/Case study 04.ipynb
+++ b/Week 08/Case study 04.ipynb
@@ -569,8 +569,7 @@
    "metadata": {},
    "source": [
     "### Conclusion :\n",
-    "\n",
-    "- Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**."
+    "Since the **P-Value is lesser than the level of significance** , we reject our Null Hypothesis. Thus, we concludes that - **Upgradation in the marketing caused an increase in the sales**."
    ]
   },
   {
@@ -699,8 +698,14 @@
    "metadata": {},
    "source": [
     "### Conclusion :\n",
-    "\n",
-    "- Since the **P-Value is greater than the level of significance** , we accept our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**."
+    "Since the **P-Value is greater than the level of significance** , we accept our Null Hypothesis. Thus, we concludes that - **There is no dependency present between Region & Manager**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### *End of the file reached!*"
    ]
   }
  ],
