Update Case study 07.ipynb

--- a/Week 11/Case study 07.ipynb
+++ b/Week 11/Case study 07.ipynb
@@ -2606,6 +2606,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Summary\n",
+    "\n",
     "### Accuracy score of 5 Models :\n",
     "\n",
     "1. Logistic Regression: 0.9791666666666666\n",
@@ -2613,16 +2615,9 @@
     "3. SVC: 0.9583333333333334\n",
     "4. Decision trees: 0.9583333333333334\n",
     "5. Random Forest (w/o refinement in data): 0.9791666666666666\n",
-    "6. Random Forest (with refinement in data): 0.9583333333333334"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Insight :\n",
+    "6. Random Forest (with refinement in data): 0.9583333333333334\n",
     "\n",
-    "* After analysing the performance of all these models we can conclude that Logistic Regression, KNN & Random forest algorithms are best suited for predicting the values in the Classification feature of this dataframe."
+    "After analysing the performance of all these models we can conclude that Logistic Regression, KNN & Random forest algorithms are best suited for predicting the values in the Classification feature of this dataframe."
    ]
   },
   {
