Update Case study 10.ipynb

--- a/Week 15/Case study 10.ipynb
+++ b/Week 15/Case study 10.ipynb
@@ -1183,7 +1183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Selecting optimal neighbor value as '2'"
+    "> Selecting optimal neighbor value as '2' (Also we have only 2 classes of mushrooms here!)"
    ]
   },
   {
